Windows 32bit compile error src/jdk.incubator.jpackage/windows/native/libjpackage/VersionInfo.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 15
    • Affects Version/s: 15
    • Component/s: deploy
    • None
    • b21
    • generic
    • windows

      Currently we run into this compile error on Windows :
      ./src/jdk.incubator.jpackage/windows/native/libjpackage/VersionInfo.cpp(123): error C2220: warning treated as error - no 'object' file generated
      ./src/jdk.incubator.jpackage/windows/native/libjpackage/VersionInfo.cpp(123): warning C4244: 'argument': conversion from 'std::streamoff' to 'size_t', possible loss of data

      (after 8236129 was pushed)

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: